# foobar

./: .pre-commit-config.yaml  justfile  pyproject.toml
.github/workflows/: tests.yml
src/foobar/: __init__.py  operations.py
tests/: poor.py  test_add.py  test_divide.py  test_multiply.py  test_substract.py
